fix menu spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -288,5 +288,5 @@ div.padding-top-bottom {
   padding-bottom: 1px;
 }
 div.padding-top {
-  padding-top: 1px;
+  padding-top: 0.7px;
 }
